--- a/windows.desktop
+++ b/windows.desktop
@@ -2,6 +2,6 @@
 Version=1.0
 Type=Application
 Name=Switch to Windows
-Exec=/home/sofia/.local/share/applications/windows/windows.sh
-Icon=/home/sofia/.local/share/applications/windows/icon.png
+Exec=~/.local/share/applications/windows/windows.sh
+Icon=~/.local/share/applications/windows/icon.png
 Terminal=false
